<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background ="#151A34"
    tools:context ="com.example.fakarni.AddTask">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="197dp"
        android:layout_height="65dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/dateText"
        android:layout_width="256dp"
        android:layout_height="42dp"
        android:background="#151A34"
        android:editable="false"
        android:hint="@string/select_date"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLabel"
        app:layout_constraintVertical_bias="0.016"
        tools:ignore="Deprecated" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textColor="#FFB700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <EditText
        android:id="@+id/timeText"
        android:layout_width="256dp"
        android:layout_height="42dp"
        android:background="#151A34"
        android:clickable="false"
        android:editable="false"
        android:hint="@string/select_time"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel"
        app:layout_constraintVertical_bias="0.028"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:background="#00FFFFFF"
        android:hapticFeedbackEnabled="true"
        android:textSize="25sp"
        app:icon="@android:drawable/ic_lock_idle_alarm"
        app:iconSize="35dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/timeText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_time"
        android:textColor="#FFB700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="58dp"
        android:layout_height="49dp"

        android:background="#00FFFFFF"
        android:hapticFeedbackEnabled="true"

        android:textSize="20sp"

        app:icon="@drawable/calendar"
        app:iconSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.314"
        app:layout_constraintStart_toEndOf="@+id/dateText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/notesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textColor="#FFB700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <EditText
        android:id="@+id/labelText"
        android:layout_width="256dp"
        android:layout_height="41dp"
        android:background="@drawable/custom_input"

        android:hint="@string/task_name"
        android:paddingStart="5dp"
        android:paddingEnd="9dp"
        android:textColor="#FFFFFF"

        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_to_be_done"
        android:textColor="#FFB700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <EditText
        android:id="@+id/noteText"
        android:layout_width="256dp"
        android:layout_height="82dp"
        android:background="@drawable/custom_input"
        android:hint="@string/write_your_notes"
        android:paddingStart="9dp"

        android:paddingEnd="9dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textCursorDrawable="@drawable/cursor_color"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notesLabel"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="92dp"
        android:layout_height="79dp"
        android:background="#00FFFFFF"
        android:hapticFeedbackEnabled="true"
        app:icon="@drawable/check"
        app:iconSize="60dp"
        app:iconTint="#FFB700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="92dp"
        android:layout_height="79dp"
        android:background="#00FFFFFF"
        android:hapticFeedbackEnabled="true"
        app:icon="@drawable/cancel"
        app:iconSize="60dp"
        app:iconTint="#B50E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="Task details"
        android:textColor="#FFB700"
        android:textDirection="firstStrongLtr"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />


</androidx.constraintlayout.widget.ConstraintLayout>
