<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#000000"
    android:backgroundTint="@color/back_ground"
    app:circularflow_defaultRadius="50dp"
    app:circularflow_radiusInDP="50dp"
    tools:context="com.example.fakarni.SignUp">

    <EditText
        android:id="@+id/text_fName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="9"
        android:hint="First name"
        android:inputType="textPersonName"
        android:paddingStart="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView3"
        android:textColor="@color/text_view"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_lName"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="307dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toTopOf="@+id/text_fName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:backgroundTint="#FFB700"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:hapticFeedbackEnabled="true"

        android:text="Register"
        android:textColor="@color/back_ground"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941"
        app:rippleColor="@color/back_ground" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/textView2"
        android:textColor="@color/text_view"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_lName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:color="#000000"
        android:ems="9"
        android:hint="Password"
        android:inputType="textPassword"

        android:paddingStart="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <EditText
        android:id="@+id/text_userName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="9"
        android:hint="User name"
        android:inputType="textPersonName"
        android:paddingStart="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/textView1"
        android:textColor="@color/text_view"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_fName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/text_lName"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="9"
        android:hint="Last name"
        android:inputType="textPersonName"
        android:textCursorDrawable="@drawable/cursor_color"
        android:paddingStart="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/textView4"
        android:textColor="@color/text_view"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_userName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_female"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="18dp"
        android:gravity="center|right"
        android:text="Female"
        android:textColor="@color/text_view"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/switch_gender"
        app:layout_constraintTop_toBottomOf="@+id/text_rePassword"
        app:layout_constraintVertical_bias="1.0" />



    <TextView
        android:id="@+id/textView_male"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="18dp"
        android:gravity="center|left"
        android:text="Male"
        android:textColor="@color/text_view"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toStartOf="@+id/switch_gender"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rePassword"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/text_rePassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="9"
        android:hint="Re-password"
        android:inputType="textPassword"

        android:paddingStart="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_color"        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView5"
        android:textColor="@color/text_view"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_rePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="48dp"
        android:text="Gender"
        android:textColor="@color/text_view"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rePassword"
        app:layout_constraintVertical_bias="0.39999998" />

    <Switch
        android:id="@+id/switch_gender"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/back_ground"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text=""
        android:textColorHighlight="@color/back_ground"
        android:textColorHint="@color/back_ground"
        android:textColorLink="@color/back_ground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView6"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:layout_marginTop="15dp"
        android:background="#00ffffff"
        android:text="Sign in"
        android:textColor="@color/text_view"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add"
        app:layout_constraintVertical_bias="0.666" />

</androidx.constraintlayout.widget.ConstraintLayout>